fix layout issue on mobile

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main {
 
 .testimonials-section {
 	display: flex;
-	justify-content: row;
+	flex-direction: column;
 }
 
 .testimonial-card {
